src/objects/FinancialAccount__c.object
<CustomObject>
    <fields>
        <fullName>Sale_Code__c</fullName>
        <description>Sale Code</description>
        <label>Sale_Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Deposit_Amount__c</fullName>
        <description>The amount of security deposit being held by the lessor as security on the lease</description>
        <label>Security_Deposit_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Local__c</fullName>
        <description>Local tax amount</description>
        <label>Tax_Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Payment__c</fullName>
        <description>Lease payment tax</description>
        <label>Tax_Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Sales_Payable__c</fullName>
        <description>Lease payable use tax</description>
        <label>Tax_Sales_Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_Months_Expired__c</fullName>
        <description>Expired terms</description>
        <label>Term_Months_Expired</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Months_Original__c</fullName>
        <description>Original term</description>
        <label>Term_Months_Original</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Months_Remaining__c</fullName>
        <description>Remaining term</description>
        <label>Term_Months_Remaining</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Code_Description__c</fullName>
        <label>Type_Code_Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Code__c</fullName>
        <label>Type_Code</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist_Data_Goes_Here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unpaid_Late_Charge__c</fullName>
        <description>Unpaid late charge</description>
        <label>Unpaid_Late_Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unpaid_Miscellaneous_Charge__c</fullName>
        <description>Unpaid miscellaneous charge</description>
        <label>Unpaid_Miscellaneous_Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Remarks__c</fullName>
        <description>User remarks</description>
        <label>User_Remarks</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Charge_Per_Mile__c</fullName>
        <description>Charge per mileage</description>
        <label>Vehicle_Charge_Per_Mile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Flag_Low_Mileage__c</fullName>
        <description>Low mileage flag</description>
        <label>Vehicle_Flag_Low_Mileage</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Insurance_Company__c</fullName>
        <description>Insurance company</description>
        <label>Vehicle_Insurance_Company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Insurance_Policy__c</fullName>
        <description>Insurance policy</description>
        <label>Vehicle_Insurance_Policy</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Mileage_Allowance__c</fullName>
        <description>Allowed mileage</description>
        <label>Vehicle_Mileage_Allowance</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Mileage_Start__c</fullName>
        <description>Start mileage</description>
        <label>Vehicle_Mileage_Start</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Sale_Type__c</fullName>
        <description>Vehicle Sale Type</description>
        <label>Vehicle_Sale_Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xxxAffiliate_Marketing_Source__c</fullName>
        <description>Affiliate Marketing  Source Flag</description>
        <label>xxxAffiliate_Marketing_Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xxxAffiliate_Sharing_Source__c</fullName>
        <description>Affiliate Sharing Source Flag</description>
        <label>xxxAffiliate_Sharing_Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xxxCharge_Amount_Lease_ToDate__c</fullName>
        <description>&quot;Lease income late charge amount</description>
        <label>xxxCharge_Amount_Lease_ToDate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xxxThird_Party_Sharing_Source__c</fullName>
        <description>Third Party Sharing Source Flag</description>
        <label>xxxThird_Party_Sharing_Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>FinancialAccount</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FinancialAccount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FinancialAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>